struttura css+variabile password js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>(insicurissimo) password generator</title>
+    <link rel="stylesheet" href="css/style.css">
     <!-- CDN BOOTSTRAP  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -12,6 +13,8 @@
     <div class="container vh-100 d-flex justify-content-center align-items-center">
         <div class="row">
             <div class="col">
+                <h1 class="text-center  text-light mb-5">La tua nuova password generata da Boolean</h1>
+                <!-- CARD CONTENITRICE NUOVA PASSWORD  -->
                 <div class="card align-items-center" style="width: 50rem; height: 10rem;">
                     <div class="card-body d-flex flex-column text-center">
                       <h5 class="card-title">La tua nuova Password</h5>
@@ -19,16 +22,12 @@
                       <a href="#" class="btn btn-primary">Salva la tua nuova Password</a>
                     </div>
                 </div>
+                <!-- /CARD CONTENITRICE NUOVA PASSWORD  -->
             </div>
         </div>
     </div>
-
-
-
-
-
     <!-- SCRIPT  -->
-    <script src="script/main.js"></script>
+    <script src="js/main.js"></script>
     <!-- SCRIPT BOOTSTRAP  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
