--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="col">
                 <h1 class="text-center  text-light mb-5">La tua nuova password generata da Boolean</h1>
                 <!-- CARD CONTENITRICE NUOVA PASSWORD  -->
-                <div class="card align-items-center" style="width: 50rem; height: 10rem;">
+                <div class="card align-items-center" style="width: 50rem; height: 11rem;">
                     <div class="card-body d-flex flex-column text-center">
                       <h5 class="card-title">La tua nuova Password</h5>
-                      <p class="card-text mt-auto"></p></p>
+                      <p id="new_password" class="card-text mt-auto"></p></p>
                       <a href="#" class="btn btn-primary">Salva la tua nuova Password</a>
                     </div>
                 </div>
